<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>net.openhft</groupId>
        <artifactId>chronicle-queue-demo</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <groupId>run.chronicle</groupId>
    <artifactId>account</artifactId>
    <name>OpenHFT/chronicle-queue-demo/account</name>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jvm.requiredArgs/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.openhft</groupId>
            <artifactId>chronicle-wire</artifactId>
        </dependency>

        <dependency>
            <groupId>net.openhft</groupId>
            <artifactId>chronicle-queue</artifactId>
        </dependency>

        <dependency>
            <groupId>net.openhft</groupId>
            <artifactId>jlbh</artifactId>
        </dependency>

        <dependency>
            <groupId>com.hubspot.jinjava</groupId>
            <artifactId>jinjava</artifactId>
            <version>2.7.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>java11</id>
            <activation>
                <jdk>[11,16]</jdk>
            </activation>
            <properties>
                <!-- Required JVM args for Java 11 -> 16 -->
                <jvm.requiredArgs>
                    --illegal-access=permit
                    --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                    --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                    --add-exports java.base/jdk.internal.util=ALL-UNNAMED
                    --add-exports java.base/sun.nio.ch=ALL-UNNAMED
                </jvm.requiredArgs>
            </properties>
        </profile>
        <profile>
            <id>java17</id>
            <activation>
                <jdk>[17,</jdk>
            </activation>
            <properties>
                <!-- Required JVM args for Java 17+ -->
                <jvm.requiredArgs>
                    --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                    --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                    --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
                    --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                    --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                    --add-exports=java.base/jdk.internal.util=ALL-UNNAMED
                    --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
                    --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                    --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
                    --add-opens=java.base/java.lang=ALL-UNNAMED
                    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                    --add-opens=java.base/java.io=ALL-UNNAMED
                    --add-opens=java.base/java.util=ALL-UNNAMED
                </jvm.requiredArgs>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <configuration>
                    <argLine>${jvm.requiredArgs}</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
